#############################################################################
BETA PUBLIC RELEASE VERSION X.Y.Z       ??-??-07
#############################################################################
- NEW FEATURES
	* Added two extensions for H-bond and contact analysis provided by
	  Julie Mitchell
- BUG FIXES
	* Added HG1 as altname for CYS to avoid assignment problems 
	* Bug fixes in propkalib.c (thanks to Julie Mitchell!)
		
#############################################################################
BETA PUBLIC RELEASE VERSION 1.2.1       4-1-07
#############################################################################
  - NEW FEATURES
    * Updated documentation to include instructions for pdb2pka support,
      references, more pydoc documents.
    * Added ligand examples to examples/ directory
    * Added native support for the TYL06 forcefield.  For more information
      on this forcefield please see
        Tan C, Yang L, Luo R.  How well does Poisson-Boltzmann implicit
        solvent agree with explicit solvent? A quantitative analysis.
        Journal of Physical Chemistry B.  110 (37), 18680-7, 2006.1
    * Added a new HTML output page which relays the different atom types
      between the AMBER and CHARMM forcefields for a generated PQR file
     (thanks to the anonymous reviewers of the latest PDB2PQR paper).

  - BUG FIXES
    * Fixed bug where a segmentation fault would occur in PropKa if the N
      atom was not the first atom listed in the residue
    * Fixed error message that occurred when a blank line was found in a
      parameter file.
    * Better error handling in MOL2 file parsing.
    * Fixed bug where ligands were not supported on PDB files with multiple
      MODEL fields.
#############################################################################
BETA PUBLIC RELEASE VERSION 1.2.0       1-31-07
#############################################################################
  - NEW FEATURES